--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tintin-formatter",
   "displayName": "TinTin++ Formatter",
-  "description": "VS Code extension a TinTin++ (.tin) fájlok formázásához",
+  "description": "VS Code extension for TinTin++ (.tin) files",
   "version": "0.0.1",
   "publisher": "Gaohei",
   "engines": {
@@ -45,6 +45,10 @@
   "scripts": {
     "vscode:prepublish": "tsc -p ./",
     "compile": "tsc -watch -p ./"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/GaoheiX/vscode-tintin-formatter"
   },
   "devDependencies": {
     "@types/vscode": "^1.60.0",
